--- a/main.css
+++ b/main.css
@@ -379,7 +379,7 @@ Navbar
       .hero
       { 
         height: 40vh;
-        background: url('../assets/main.jpeg') center/cover no-repeat;
+        background: url('main.jpeg') center/cover no-repeat;
         margin-bottom: 2rem;
         border-radius: var(--borderRadius);
         position: relative;
